--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -25,7 +25,7 @@ jobs:
 
     steps:
     - name: Checkout Repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@main
 
     - name: Install Dependencies
       run: |
