--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -25,7 +25,7 @@ jobs:
 
     steps:
     - name: Checkout Repository
-      uses: actions/checkout@4
+      uses: actions/checkout@v2
 
     - name: Install Dependencies
       run: |
@@ -53,4 +53,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: ${{ github.event.inputs.NAME }}   # Replace with a suitable name
-        path: ./zip/Custom_Rom_SDM450.zip
+        path: zip/Custom_Rom_SDM450.zip
